[package]
name = "svc-agent"
version = "0.22.0"
authors = ["Andrei Nesterov <ae.nesterov@gmail.com>"]
description = "An agent library."
readme = "README.md"
keywords = ["agent", "mqtt", "pubsub", "messaging-patterns", "event-driven"]
categories = ["network-programming", "web-programming"]
repository = "https://github.com/foxford/svc-agent-rs"
license = "MIT"
edition = "2018"

[lib]
doctest = false

[features]
default = ["mqtt"]
queue-counter = []
mqtt = ["rumqttc"]
sqlx = ["dep:sqlx", "svc-authn/sqlx"]

[dependencies]
async-channel = "1"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
http = "0.2"
log = "0.4"
rumqttc = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive" ] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"], optional = true }
svc-authn = { version = "0.8" }
tokio = { version = "1.28", features = ["rt-multi-thread", "time"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
