[package]
name = "svc-agent-integration-tests"
version = "0.14.13"
authors = ["Timofey Martynov"]
edition = "2018"

[dependencies]
chrono = "0.4"
futures = { version = "0.3", features = ["thread-pool"] }
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
svc-agent = { path = ".." }
